k8s/deployment-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mini-platform-api
  labels:
    app: mini-platform-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mini-platform-api
  template:
    metadata:
      labels:
        app: mini-platform-api
    spec:       
      containers:
        - name: mini-platform-api
          imagePullPolicy: Always
          image: ghcr.io/ojasik/mini-platform:IMAGE_TAG
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet: 
              path: /ready
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 5

          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
