k8s/service-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: mini-platform-api
spec:
  selector:
    app: mini-platform-api
  ports:
  - port: 8080
    targetPort: 8080
  type: ClusterIP
