k8s/service-redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: mini-platform-redis
spec:
  selector:
    app: mini-platform-redis
  ports:
  - port: 6379
    targetPort: 6379
  type: ClusterIP
