k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mini-platform-ingress
spec:
  rules:
    - host: mini-platform.local
      http:
        paths:
         - path: /
           pathType: Prefix
           backend:
             service:
               name: mini-platform-api
               port:
                 number: 8080
